...
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<resources>
    <string name="title_watch_trailer">Watch Trailer</string>
    <string name="navigate_up">Navigate up</string>
    <string name="core_ds_read_more">"Read more"</string>
    <string name="core_ds_ok">Ok</string>
</resources>
